# Tell Dawn and dependencies to not do Chromium-specific things
build_with_chromium = false

use_system_xcode = true

# Use Chromium's binutils to have "hermetic" builds on bots
linux_use_bundled_binutils_override = true

# Android 32-bit non-component, non-clang builds cannot have symbol_level=2
# due to 4GiB file size limit, see https://crbug.com/648948.
ignore_elf32_limitations = false
