# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# The paths to Dawn's dependencies
dawn_glfw_dir = "//third_party/glfw"
dawn_jinja2_dir = "//third_party/dawn/third_party/jinja2"
dawn_googletest_dir = "//third_party/dawn/third_party/googletest"
dawn_shaderc_dir = "//third_party/shaderc"
dawn_spirv_cross_dir = "//third_party/dawn/third_party/spirv-cross"
dawn_spirv_tools_dir = "//third_party/dawn/third_party/SPIRV-Tools"
